# lanthing-pc

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  build.linux.sh  build.mac.sh  build.ps1  build.sh  build.win.ps1  lanthing.desktop  lanthing.rc  lanthing.rc.in  options-default.cmake  third-party-licenses.txt
app/: .clang-format  .formatconfig  .gitignore  CMakeLists.txt  app.rc  app.rc.in  resources.qrc
app/i18n/: lt-zh_CN.ts  zh_CN.ts
app/icons/: credit.txt
app/src/: app.cpp  app.h  check_decode_ability.cpp  client_session.cpp  client_session.h  main.cpp  select_gpu.cpp  select_gpu.h  ui.h
app/src/client/: client_manager.cpp  client_manager.h  client_session.cpp  client_session.h
app/src/service/: service_manager.cpp  service_manager.h
app/src/views/: friendly_error_code.cpp  gui.cpp  gui.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lanthing/: .gitignore  CMakeLists.txt  lanthing.rc  lanthing.rc.in
lanthing-qt/: .clang-format  CMakeLists.txt
lanthing-qt/src/: client_session.cpp  client_session.h  client_ui.cpp  client_ui.h  main.cpp
lanthing/src/: firewall.cpp  firewall.h  lt_constants.h  main.cpp  message_handler.h  string_keys.cpp  string_keys.h
lanthing/src/app/: check_decode_ability.cpp  check_decode_ability.h  select_gpu.cpp
lanthing/src/client/: client.cpp  client.h
lanthing/src/graphics/: types.h
lanthing/src/plat/: d3d11_video_device.cpp  d3d11_video_device.h  pc_sdl.cpp  pc_sdl.h  pc_sdl_input.cpp  video_device.cpp  video_device.h
lanthing/src/service/: service.cpp  service.h
lanthing/src/worker/: display_setting.cpp  display_setting.h  message_handler.h  session_change_observer.cpp  session_change_observer.h  worker.cpp  worker.h  worker_check_decode.cpp  worker_check_decode.h  worker_check_dupl.cpp  worker_check_dupl.h  worker_clipboard.cpp  worker_clipboard.h  worker_setting.cpp  worker_setting.h  worker_streaming.cpp  worker_streaming.h
ltlib/: CMakeLists.txt
ltlib/include/ltlib/: event.h  load_library.h  locale.h  log_sink.h  logging.h  ltlib.h  pragma_warning.h  reconnect_interval.h  settings.h  singleton_process.h  spin_mutex.h  strings.h  system.h  threads.h  time_sync.h  times.h  transform.h  versions.h  win_service.h
ltlib/src/: event.cpp  load_library.cpp  locale.cpp  log_sink.cpp  logging.cpp  reconnect_interval.cpp  settings.cpp  settings_tests.cpp  singleton_process.cpp  strings.cpp  system.cpp  threads.cpp  time_sync.cpp  times.cpp  transform.cpp  win_service.cpp
ltlib/src/io/: buffer.h  client.cpp  client_secure_layer.cpp  client_secure_layer.h  client_transport_layer.cpp  client_transport_layer.h  ioloop.cpp  server.cpp  server_transport_layer.cpp  server_transport_layer.h
ltproto/: .gitignore  CMakeLists.txt  defines.json  gencpp.py  pom.xml
ltproto/include/ltproto/: ltproto.h
ltproto/ltproto/peer2peer/: capture_video_frame.proto  controller_added_removed.proto  controller_response.proto  controller_status.proto  keep_alive.proto  keyboard_event.proto  mouse_click.proto  mouse_motion.proto  mouse_wheel.proto  start_transmission.proto  start_transmission_ack.proto  start_working.proto  start_working_ack.proto  stop_transmission.proto  stop_working.proto  streaming_params.proto  switch_hid_driver.proto  video_codec_type.proto  video_frame.proto  video_frame_ack1.proto  video_frame_ack2.proto
ltproto/ltproto/server/: allocate_device_id.proto  allocate_device_id_ack.proto  close_connection.proto  connection_type.proto  login_device.proto  login_device_ack.proto  login_user.proto  login_user_ack.proto  open_connection.proto  open_connection_ack.proto  request_connection.proto  request_connection_ack.proto
ltproto/ltproto/signaling/: join_room.proto  join_room_ack.proto  signaling_message.proto  signaling_message_ack.proto
ltproto/ltproto/ui/: push_device_id.proto
ltproto/src/: ltproto.cpp
src/app/: CMakeLists.txt  app.cpp  app.h  check_decode_ability.cpp  resources.qrc  select_gpu.cpp
src/app/client/: client_manager.cpp  client_manager.h  client_session.cpp  client_session.h
src/app/i18n/: lt-zh_CN.ts
src/app/views/: friendly_error_code.cpp  friendly_error_code.h  friendly_error_code_tests.cpp  gui.cpp  gui.h
src/audio/: CMakeLists.txt
src/audio/capturer/: audio_capturer.cpp  audio_capturer.h  fake_audio_capturer.cpp  fake_audio_capturer_tests.cpp  win_audio_capturer.cpp
src/audio/player/: audio_player.cpp  sdl_audio_player.h
src/client/: CMakeLists.txt  client.cpp  client.h
src/clipboard/: CMakeLists.txt  nbclipboard.cpp  nbclipboard.h
src/inputs/: CMakeLists.txt
src/inputs/capturer/: input_capturer.cpp  input_capturer.h  input_event.h  input_event_tests.cpp
src/inputs/executor/: gamepad.cpp  gamepad.h  input_executor.cpp  input_executor.h  scancode.h  (+3 more)
src/ltlib/: CMakeLists.txt  event.cpp  event.h  event_stub.cpp  event_win.cpp  load_library.h  load_library_posix.cpp  load_library_win.cpp  logging.cpp  logging.h  reconnect_interval.h  reconnect_interval_tests.cpp  settings.cpp  settings.h  settings_tests.cpp  singleton_process_posix.cpp  singleton_process_win.cpp  spin_mutex.h  strings.cpp  strings.h  strings_tests.cpp  system.cpp  system.h  system_linux.cpp  system_mac.cpp  system_win.cpp  thread_name_internal.h  thread_name_posix.cpp  thread_name_win.cpp  threads.cpp  threads.h  times.cpp  times_platform.h  times_platform_posix.cpp  times_platform_win.cpp  transform.cpp  transform_tests.cpp  win_service.h
src/plat/: CMakeLists.txt  d3d11_video_device.cpp  pc_sdl.cpp  pc_sdl.h  pc_sdl_input.cpp  pc_sdl_input.h  video_device_stub.cpp  video_device_win.cpp
src/service/: CMakeLists.txt  service.cpp  service.h
src/transport/: CMakeLists.txt
src/video/: CMakeLists.txt  types.h
src/worker/: CMakeLists.txt  session_change_observer.cpp  worker_check_decode.cpp  worker_check_decode.h  worker_check_dupl.cpp  worker_clipboard.h  worker_setting.cpp  worker_streaming.cpp  worker_streaming.h
transport/: .clang-format  CMakeLists.txt
transport/rtc2/: CMakeLists.txt
transport/src/: transport_tcp.cpp
transport/tcp/: transport_tcp.cpp
(+427 files in other folders)
